@@ -14,28 +14,25 @@
 
 namespace TestSiteNVelocity.Controllers
 {
-	using System;
 	using System.Collections;
-
 	using Castle.MonoRail.Framework;
-
 
 	public class UsingComponentController : Controller
 	{
 		public void CaptureForDirective()
-		{			
+		{
 		}
 
 		public void CaptureFor()
-		{			
+		{
 		}
 
 		public void CaptureForAppend()
-		{			
+		{
 		}
 
 		public void CaptureForAppendBefore()
-		{			
+		{
 		}
 
 		public void InlineComponentUsingTemplatedRender()
@@ -66,11 +63,11 @@ namespace TestSiteNVelocity.Controllers
 		public void Index4()
 		{
 		}
-	
+
 		public void Index5()
 		{
 		}
-	
+
 		public void Index6()
 		{
 		}
@@ -101,6 +98,14 @@ namespace TestSiteNVelocity.Controllers
 			items.Add("2");
 
 			PropertyBag.Add("items", items);
+		}
+
+		public void DynamicComponent()
+		{
+			ArrayList cmps = new ArrayList(2);
+			cmps.Add("SimpleInlineViewComponent");
+			cmps.Add("SimpleInlineViewComponent2");
+			PropertyBag.Add("components", cmps);
 		}
 	}
 }
